<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".presentation.MainActivity">


    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/subHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subHeading"
        android:textAlignment="center"
        android:textSize="14dp" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="comp3350.group6.promise.presentation.fragments.LoginFormFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/goToCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goToCreate" />

</LinearLayout>